unpackaged/main/default/objects/Self_Serve_Opportunity_Sync__e/Self_Serve_Opportunity_Sync__e.object-meta.xml
<CustomObject>
    <description>Event used to send the info to workato for creation of campaign eligibility, update of OLI with promo Id</description>
    <label>Self Serve Opportunity Sync</label>
    <pluralLabel>Self Serve Opportunity Sync</pluralLabel>
</CustomObject>