unpackaged/main/default/objects/Self_Serve_Opportunity_Sync__e/fields/Agent_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_Contact_Id__c</fullName>
    <description>Contact Id of the agent who has purchased through SS portal</description>
    <label>Agent Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>