unpackaged/main/default/objects/Self_Serve_Opportunity_Sync__e/fields/AgentNet_Id__c.field-meta.xml
<CustomField>
    <fullName>AgentNet_Id__c</fullName>
    <description>Capture the agent net Id of the agent who has purchased through SS portal</description>
    <label>AgentNet Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>