unpackaged/main/default/objects/Self_Serve_Opportunity_Sync__e/fields/Basket_Id__c.field-meta.xml
<CustomField>
    <fullName>Basket_Id__c</fullName>
    <description>Basket Id tagged on the opportunity level</description>
    <label>Basket Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>