unpackaged/main/default/objects/Self_Serve_Opportunity_Sync__e/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country/region of the agent</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>