unpackaged/main/default/objects/Self_Serve_Opportunity_Sync__e/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <description>Id of the related SS opportunity, for creation of CI</description>
    <label>Opportunity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>