unpackaged/main/default/objects/Self_Serve_Opportunity_Sync__e/fields/Opportunity_LineItem_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_LineItem_Id__c</fullName>
    <description>OLI Id for updating the promo Id field</description>
    <label>Opportunity LineItem Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>